[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cliriculum"
description = "A python cli tool to rapidly create an html or PDF resume"
readme = "README.md"
version = "0.1.5.1-2"
license = {file = 'LICENSE.md'}
dependencies = [
    "mistletoe"
]
requires-python = '>=3.9'

[project.urls]
homepage="https://github.com/sondalex/cliriculum"
documentation="https://pandas.pydata.org/docs/"

[project.optional-dependencies]
test = [
   "pytest",
   "pypdf",
   "requests",
]
doc = [
    "myst-parser",
    "sphinx",
    "sphinx-autoapi",
    "furo"
]

[project.scripts]
cliriculum = "cliriculum.main:main"

[tool.setuptools]
packages = ["cliriculum"]

[tool.setuptools.package-data]
cliriculum = ["data/*", "data/*/*", "data/*/*/*"]

[tool.setuptools.exclude-package-data]
cliriculum = ["data/__pycache__/", "data/*/__pycache__", "data/*/*/__pycache__"]

# pycache gets generated anyway

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "deps"
] # https://docs.pytest.org/en/7.1.x/example/pythoncollection.html
