[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cliriculum"
description = "A python cli tool to rapidly create an html or PDF resume"
readme = "README.md"
version = "0.1.6"
license = {file = 'LICENSE.md'}
dependencies = [
    "mistletoe>=1.0.1"
]
requires-python = '>=3.9'

[project.urls]
homepage="https://github.com/sondalex/cliriculum"
documentation="https://pandas.pydata.org/docs/"

[project.optional-dependencies]
test = [
   "pytest>=7.2.1",
   "pypdf>=3.3.0",
   "requests>=2.28.2",
]
doc = [
    "myst-parser>=0.18.1",
    "sphinx>=5.3.0",
    "sphinx-autoapi>=2.0.1",
    "furo>=2022.12.7"
]

[project.scripts]
cliriculum = "cliriculum.main:main"

[tool.setuptools]
packages = ["cliriculum"]

[tool.setuptools.package-data]
cliriculum = ["data/*", "data/*/*", "data/*/*/*"]

[tool.setuptools.exclude-package-data]
cliriculum = ["data/__pycache__/", "data/*/__pycache__", "data/*/*/__pycache__"]

# pycache gets generated anyway

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "deps"
] # https://docs.pytest.org/en/7.1.x/example/pythoncollection.html
